适配: 降级至 Minecraft 1.16.5 并迁移旧版 API